# stubgen

./: .gitignore  .gitmodules  LICENSE  README.md  prek.toml  pyproject.toml  tessl.json
.cursor/rules/: tessl__rule__agent-forge__nuitka-stubgen__stubgen.mdc
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  bug.yml  config.yml  feature.yml
.github/workflows/: tests.yml
.tessl/: RULES.md
.tessl/tiles/agent-forge/nuitka-stubgen/: tile.json
.tessl/tiles/agent-forge/nuitka-stubgen/rules/: stubgen.md
docs/: roadmap.md
src/nuitka_stubgen/: cli.py
src/nuitka_stubgen/generation/: core.py
src/stubgen/: __init__.py  cli.py
src/stubgen/generation/: __init__.py  core.py  engine.py  support.py  validate.py
tests/: conftest.py  run_vendor_py35.py  test_cli.py  test_corpus_helpers.py  test_corpus_packages.py  test_error_handling.py  test_generation.py  test_generation_units.py  test_stubgen_vendored.py
tests/fixtures/cases/ast/legacy/async/: expected.pyi  source.py
tests/fixtures/cases/ast/legacy/attribute_complex/: expected.pyi  (+1 more)
tests/fixtures/cases/libcst/abstract_property/: expected.pyi  source.py
tests/fixtures/cases/libcst/async/: expected.pyi  source.py
tests/fixtures/cases/libcst/attrs/: expected.pyi  source.py
tests/fixtures/cases/libcst/basic/: expected.pyi  source.py
tests/fixtures/cases/libcst/bubble_sort/: expected.pyi
tests/fixtures/cases/libcst/class_attrs/: expected.pyi  source.py
tests/fixtures/cases/libcst/code/: expected.pyi  source.py
tests/fixtures/cases/libcst/comment_only/: source.py
tests/fixtures/cases/libcst/contextmanager/: expected.pyi  source.py
tests/fixtures/cases/libcst/dataclasses/: expected.pyi  source.py
tests/fixtures/cases/libcst/decorator_args/: expected.pyi  source.py
tests/fixtures/cases/libcst/decorators/: expected.pyi  source.py
tests/fixtures/cases/libcst/descriptor/: expected.pyi  source.py
tests/fixtures/cases/libcst/enum/: expected.pyi  source.py
tests/fixtures/cases/libcst/exceptions/: expected.pyi  source.py
tests/fixtures/cases/libcst/final/: expected.pyi  source.py
tests/fixtures/cases/libcst/final_decorator/: expected.pyi  source.py
tests/fixtures/cases/libcst/forward_ref/: expected.pyi  source.py
tests/fixtures/cases/libcst/generators/: expected.pyi  source.py
tests/fixtures/cases/libcst/generics/: expected.pyi  source.py
tests/fixtures/cases/libcst/literal_type/: expected.pyi  source.py
tests/fixtures/cases/libcst/match_case/: expected.pyi  source.py
tests/fixtures/cases/libcst/metaclass/: expected.pyi  source.py
tests/fixtures/cases/libcst/mixed_imports/: expected.pyi  source.py
tests/fixtures/cases/libcst/namedtuples/: expected.pyi  source.py
tests/fixtures/cases/libcst/nested_classes/: expected.pyi  source.py
tests/fixtures/cases/libcst/properties/: expected.pyi  source.py
tests/fixtures/cases/libcst/property_deleter/: expected.pyi  source.py
tests/fixtures/cases/libcst/protocol/: expected.pyi  source.py
tests/fixtures/cases/libcst/self_type/: expected.pyi  source.py
tests/fixtures/cases/libcst/signatures/: expected.pyi  source.py
tests/fixtures/cases/libcst/singledispatch/: expected.pyi  source.py
tests/fixtures/cases/libcst/slots/: expected.pyi  source.py
tests/fixtures/cases/libcst/typealias/: expected.pyi  source.py
tests/fixtures/cases/libcst/typeddict/: expected.pyi  source.py
tests/fixtures/cases/libcst/typevar_bounds/: expected.pyi  source.py
tests/fixtures/cases/libcst/walrus/: expected.pyi  source.py
tests/support/: ast_compare.py  check_goldens_stale.py  corpus.py  update_goldens.py
(+75 files in other folders)
